cluster/test/uptime/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-ingressroute
  namespace: uptime-kuma
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptime.test-kubes.com`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
